[project]
name = "hm-pblv"
version = "0.0.0"
description = "HM PBLV project"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
package-mode = false
requires-python = "~3.11.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
