[project]
name = "hm-pblv"
version = "0.0.0"
description = "HM PBLV project"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
package-mode = false
requires-python = "~3.11.10"
dependencies = [
    "tensorflow (>=2.18.0,<3.0.0)",
    "tensorflow-datasets(>=4.9.7,<5.0.0)",
    "keras (>=3.8.0,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pytorchyolo (>=1.0.1)",
    "pycocotools (>=2.0.8)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
